src/opt/tests/snapshots/inline__bail_this.snap
---
created: "2019-04-09T06:24:19.302339800Z"
creator: insta@0.7.1
source: src/opt/tests/inline.rs
expression: "\n    (function() {\n        if (foo) { this; }\n    })();\n"
---
_fun = <function>:
    _iff = <global foo>
    <if> _iff:
        <dead> = <this>
    <else>:
        <empty>
<dead> = _fun()
