src/opt/tests/snapshots/inline__basic.snap
---
created: "2019-04-09T06:24:19.306344300Z"
creator: insta@0.7.1
source: src/opt/tests/inline.rs
expression: "\n    (function() {\n        foo;\n    })();\n    (() => {\n        foo;\n    })();\n"
---
_mis = <void>
<dead> = <global foo>
<dead> = _mis
_mis$1 = <void>
<dead> = <global foo>
<dead> = _mis$1
